--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </button>
       </div>
 
-      <h1 class="text-center mb-4">Berita Terbaru</h1>
+      <h1 class="text-center mb-4">Berita Terkini</h1>
     <div class="container pb-5">
         <div class="row">
             <div class="col-md-4">
