--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
     <header>
-      <nav class="shadow navbar navbar-expand-lg bg-primary-subtle text-primary-emphasis fixed-top">
-        <div class="container-fluid">
+      <nav class="shadow navbar py-0 navbar-expand-lg bg-primary-subtle fixed-top">
+        <div class="container">
           <a class="navbar" href="#">
             <img src="logo.png" alt="logo" class="logo img-fluid no-background">
           </a>
@@ -26,10 +27,10 @@
               aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse me-5" id="navbarScroll">
-            <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav ms-auto navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li class="nav-item dropdown">
-                <a class="nav-link me-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a  class="nav-link me-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Link
                 </a>
                 <ul class="dropdown-menu">
@@ -86,51 +87,53 @@
       </nav>
     </header>
     <main>
-      <div id="carouselExampleCaptions" class="carousel slide mb-5">
+      <div id="hero-carousel" class="carousel slide">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="gambar1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+          <div class="carousel-item active c-item">
+            <img src="gambar1.jpg" class="d-block w-100 c-img" alt="...">
+            <div class="carousel-caption top-0 mt-5 d-none d-md-block">
+              <p class="mt-5 fs-3 text-uppercase">Higher Education For All</p>
+              <h1 class="display-1 fw-bolder text-capitalize">STT CIPASUNG</h1>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-4">Read More</button>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="gambar2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+          <div class="carousel-item c-item">
+            <img src="gambar2.jpg" class="d-block w-100 c-img" alt="...">
+            <div class="carousel-caption top-0 mt-5 d-none d-md-block">
+              <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the second slide.</p>
+              <h1 class="display-1 fw-bolder text-capitalize">Second slide label</h1>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-4">Read More</button>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="gambar3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+          <div class="carousel-item c-item">
+            <img src="gambar3.jpg" class="d-block w-100 c-img" alt="...">
+            <div class="carousel-caption top-0 mt-5 d-none d-md-block">
+              <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the third slide.</p>
+              <h1 class="display-1 fw-bolder text-capitalize">Third slide label</h1>
+              <button class="btn btn-primary px-4 py-2 fs-5 mt-4">Read More</button>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-      <h1 class="text-center mb-4">Berita Terbaru</h1>
+      <h1 class="text-center m-4">Berita Terbaru</h1>
     <div class="container pb-5">
-        <div class="row">
+        <div class="row g-3">
             <div class="col-md-4">
-                <div class="card">
-                    <img src="gambar3.jpg" class="card-img-top" alt="Berita 1">
+                <div class="card bg-primary-subtle card-item">
+                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 1">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 1</h5>
                         <p class="card-text">Ini adalah ringkasan berita 1. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -139,8 +142,8 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="gambar3.jpg" class="card-img-top" alt="Berita 2">
+                <div class="card card-item">
+                    <img src="gambar2.jpg" class="card-img-top card-img" alt="Berita 2">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 2</h5>
                         <p class="card-text">Ini adalah ringkasan berita 2. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -149,8 +152,38 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="gambar3.jpg" class="card-img-top" alt="Berita 3">
+                <div class="card card-item">
+                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Judul Berita 3</h5>
+                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
+                        <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card card-item">
+                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Judul Berita 3</h5>
+                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
+                        <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card card-item">
+                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Judul Berita 3</h5>
+                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
+                        <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card card-item">
+                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 3</h5>
                         <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -222,5 +255,6 @@
     </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
