--- a/IF.html
+++ b/IF.html
@@ -15,7 +15,7 @@
       <nav class="shadow navbar navbar-expand-lg bg-primary-subtle text-primary-emphasis fixed-top">
         <div class="container-fluid">
           <a class="navbar" href="#">
-            <img src="logo.png" alt="logo" class="logo img-fluid no-background">
+            <img src="Gambar/logo.png" alt="logo" class="logo img-fluid no-background">
           </a>
           <button class="navbar-toggler" 
               type="button" 
@@ -95,7 +95,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
-            <img src="gambar1.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="Gambar/gambar1.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Higher Education For All</p>
               <h1 class="display-1 fw-bolder text-capitalize">STT CIPASUNG</h1>
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="gambar2.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="Gambar/gambar2.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the second slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Second slide label</h1>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="gambar3.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="Gambar/gambar3.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the third slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Third slide label</h1>
@@ -134,7 +134,7 @@
     
 
     <div class="clearfix container ">
-        <img src="Informatika.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
+        <img src="Gambar/Informatika.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
       
         <p class="text-justify">
             Program Studi Informatika menyediakan pendidikan di bidang fondasi teoritis informasi dan komputasi serta teknik praktis untuk aplikasi mereka dalam sistem komputer
