--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav class="shadow navbar py-0 navbar-expand-lg bg-primary-subtle fixed-top">
         <div class="container">
           <a class="navbar" href="#">
-            <img src="logo.png" alt="logo" class="logo img-fluid no-background">
+            <img src="./Gambar/logo.png" alt="logo" class="logo img-fluid no-background">
           </a>
           <button class="navbar-toggler" 
               type="button" 
@@ -95,7 +95,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
-            <img src="gambar1.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="./Gambar/gambar1.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Higher Education For All</p>
               <h1 class="display-1 fw-bolder text-capitalize">STT CIPASUNG</h1>
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="gambar2.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="./Gambar/gambar2.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the second slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Second slide label</h1>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="gambar3.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="./Gambar/gambar3.jpg" class="d-block w-100 c-img" alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the third slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Third slide label</h1>
@@ -133,7 +133,7 @@
         <div class="row g-3">
             <div class="col-md-4">
                 <div class="card bg-primary-subtle card-item">
-                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 1">
+                    <img src="./Gambar/gambar1.jpg" class="card-img-top card-img" alt="Berita 1">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 1</h5>
                         <p class="card-text">Ini adalah ringkasan berita 1. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -143,7 +143,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-item">
-                    <img src="gambar2.jpg" class="card-img-top card-img" alt="Berita 2">
+                    <img src="./Gambar/gambar2.jpg" class="card-img-top card-img" alt="Berita 2">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 2</h5>
                         <p class="card-text">Ini adalah ringkasan berita 2. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -153,7 +153,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-item">
-                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <img src="./Gambar/gambar3.jpg" class="card-img-top card-img" alt="Berita 3">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 3</h5>
                         <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -163,7 +163,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-item">
-                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <img src="./Gambar/gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 3</h5>
                         <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -173,7 +173,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-item">
-                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <img src="./Gambar/gambar2.jpg" class="card-img-top card-img" alt="Berita 3">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 3</h5>
                         <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
@@ -183,7 +183,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card card-item">
-                    <img src="gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
+                    <img src="./Gambar/gambar3.jpg" class="card-img-top card-img" alt="Berita 3">
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 3</h5>
                         <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
