--- a/index.html
+++ b/index.html
@@ -45,10 +45,18 @@
                   Akademik
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Jurusan</a></li>
+                  <li class="dropdown-submenu position-relative">
+                    <a class="dropdown-item dropdown-toggle" href="#" id="jurusanDropdown" role="button">Jurusan</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="IF.html">Informatika</a></li>
+                      <li><a class="dropdown-item" href="#">Teknik Industri</a></li>
+                    </ul>
+                  </li>
                   <li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
                 </ul>
               </li>
+              
+              
               <li class="nav-item dropdown">
                 <a class="nav-link me-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Mahasiswa
