--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Judul Berita 1</h5>
                         <p class="card-text">Ini adalah ringkasan berita 1. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="#" class="btn btn-primary">Baca Selengkapnya</a>
+                        <a href="berita1.html" class="btn btn-primary">Baca Selengkapnya</a>
                     </div>
                 </div>
             </div>
