menambahkan TI.html update index.html dan update IF.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="dropdown-item dropdown-toggle" href="#" id="jurusanDropdown" role="button">Jurusan</a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="IF.html">Informatika</a></li>
-                      <li><a class="dropdown-item" href="#">Teknik Industri</a></li>
+                      <li><a class="dropdown-item" href="TI.html">Teknik Industri</a></li>
                     </ul>
                   </li>
                   <li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
