--- a/berita1.html
+++ b/berita1.html
@@ -59,7 +59,7 @@
               </ul>
             </li>
             <li>
-              <a class="nav-link me-3" href="http://s.id/pmbsttc">PMB Online
+              <a class="nav-link me-3" href="PMB.html">PMB Online
               </a>
             </li>
             <a class="btn btn-primary" href="#" role="button">Log In</a>
@@ -71,7 +71,6 @@
   <main>
     <div class="container my-5">
       <div class="row">
-        <!-- Bagian Konten Utama -->
         <div class="col-md-8">
           <div class="card mb-4">
             <img src="Gambar/gambar1.jpg" class="card-img-top header-image" alt="Gambar Berita">
@@ -95,8 +94,6 @@
               </p>
             </div>
           </div>
-
-          <!-- Bagian Share Buttons -->
           <div class="share-buttons mb-4">
             <span>Bagikan: </span>
             <a href="#"><i class="bi bi-facebook"></i> Facebook</a>
@@ -104,10 +101,7 @@
             <a href="#"><i class="bi bi-whatsapp"></i> WhatsApp</a>
           </div>
         </div>
-
-        <!-- Sidebar -->
         <div class="col-md-4">
-          <!-- Berita Terkait dengan Gambar Thumbnail -->
           <h3>Berita Terkait</h3>
           <ul class="list-group related-news">
             <li class="list-group-item d-flex align-items-center b-item">
@@ -122,7 +116,6 @@
               <img src="Gambar/gambar1.jpg" alt="Judul Berita 4" class="me-3 b-object">
               <a href="#" class="link-dark link-offset-2 link-underline-opacity-0">Judul Berita 4</a>
             </li>
-
 
           </ul>
         </div>
