--- a/PMB.html
+++ b/PMB.html
@@ -69,7 +69,7 @@
                 </ul>
               </li>
               <li>
-                <a class="nav-link me-3" href="http://s.id/pmbsttc">PMB Online
+                <a class="nav-link me-3" href="PMB.html">PMB Online
                 </a>
               </li>
                 <a class="btn btn-primary" href="#" role="button">Log In</a>
