--- a/TI.html
+++ b/TI.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="shadow navbar py-0 navbar-expand-lg bg-primary-subtle fixed-top">
         <div class="container">
-          <a class="navbar" href="#">
+          <a class="navbar" href="index.html">
             <img src="./Gambar/logo.png" alt="logo" class="logo img-fluid no-background">
           </a>
           <button class="navbar-toggler" 
