--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
@@ -87,7 +87,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active c-item">
-            <img src="./Gambar/gambar1.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="./Gambar/gambar1.jpg" class="d-block w-100 " alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Higher Education For All</p>
               <h1 class="display-1 fw-bolder text-capitalize">STT CIPASUNG</h1>
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="./Gambar/gambar2.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="./Gambar/gambar2.jpg" class="d-block w-100 " alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the second slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Second slide label</h1>
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="carousel-item c-item">
-            <img src="./Gambar/gambar3.jpg" class="d-block w-100 c-img" alt="...">
+            <img src="./Gambar/gambar3.jpg" class="d-block w-100 " alt="...">
             <div class="carousel-caption top-0 mt-5 d-none d-md-block">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the third slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Third slide label</h1>
