menambahkan k,akademik.html dan update yang lainnya

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       <li><a class="dropdown-item" href="TI.html">Teknik Industri</a></li>
                     </ul>
                   </li>
-                  <li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
+                  <li><a class="dropdown-item" href="K.akademik.html">Kalender Akademik</a></li>
                 </ul>
               </li>
               
