--- a/TI.html
+++ b/TI.html
@@ -52,9 +52,11 @@
                       <li><a class="dropdown-item" href="TI.html">Teknik Industri</a></li>
                     </ul>
                   </li>
-                  <li><a class="dropdown-item" href="#">Kalender Akademik</a></li>
+                  <li><a class="dropdown-item" href="K.akademik.html">Kalender Akademik</a></li>
                 </ul>
               </li>
+              
+              
               <li class="nav-item dropdown">
                 <a class="nav-link me-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Mahasiswa
