--- a/berita1.html
+++ b/berita1.html
@@ -55,8 +55,6 @@
                 <li><a class="dropdown-item" href="K.akademik.html">Kalender Akademik</a></li>
               </ul>
             </li>
-            
-            
             <li class="nav-item dropdown">
               <a class="nav-link me-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Mahasiswa
@@ -72,7 +70,7 @@
               <a class="nav-link me-3" href="PMB.html">PMB Online
               </a>
             </li>
-              <a class="btn btn-primary" href="#" role="button">Log In</a>
+              <button class="btn btn-primary" href="#" role="button">Log In</button>
             </li>
         </div>
       </div>
