--- a/IF.html
+++ b/IF.html
@@ -85,20 +85,19 @@
           <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active c-item">
-            <img src="Gambar/IF1.JPG" class="d-block w-100 c-img" alt="...">
+          <div class="carousel-item active">
+            <img src="Gambar/IF1.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption top-0 d-none d-md-block align-content-center">
               <h1 class="display-1 fw-bolder text-capitalize" >INFORMATIKA</h1>
               <p>Pengenalan Jurusan Informatika</p>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-4" onclick="location.href='#INFORMATIKA'">Read More</button>
             </div>
           </div>
-          <div class="carousel-item c-item">
-            <img src="Gambar/IF2.JPG" class="d-block w-100 c-img" alt="...">
-            
+          <div class="carousel-item">
+            <img src="Gambar/IF2.JPG" class="d-block w-100" alt="...">
           </div>
-          <div class="carousel-item c-item">
-            <img src="Gambar/IF3.JPG" class="d-block w-100 c-img" alt="...">
+          <div class="carousel-item">
+            <img src="Gambar/IF3.JPG" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
