--- a/TI.html
+++ b/TI.html
@@ -84,8 +84,8 @@
           <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active c-item">
-            <img src="Gambar/TI1.JPG" class="d-block w-100 c-img" alt="...">
+          <div class="carousel-item active">
+            <img src="Gambar/TI1.JPG" class="d-block w-100" alt="...">
             <div class="carousel-caption top-0 d-none d-md-block align-content-center">
               <h1 class="display-1 fw-bolder text-capitalize">TEKNIK INDUSTRI</h1>
               <P>Pengenalan Jurusan Teknik Industri</P>
@@ -93,12 +93,12 @@
             </div>
           </div>
 
-          <div class="carousel-item c-item">
-            <img src="Gambar/TI2.JPG" class="d-block w-100 c-img" alt="...">
+          <div class="carousel-item">
+            <img src="Gambar/TI2.JPG" class="d-block w-100" alt="...">
           </div>
           
-          <div class="carousel-item c-item">
-            <img src="Gambar/TI3.jpg" class="d-block w-100 c-img" alt="...">
+          <div class="carousel-item">
+            <img src="Gambar/TI3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
