--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active c-item">
+          <div class="carousel-item active">
             <img src="./Gambar/gambar1.jpg" class="d-block w-100 " alt="...">
             <div class="carousel-caption top-0 d-none d-md-block align-content-center">
               <p class="mt-5 fs-3 text-uppercase">Higher Education For All</p>
@@ -92,17 +92,17 @@
               <button class="btn btn-primary px-4 py-2 fs-5 mt-4">Read More</button>
             </div>
           </div>
-          <div class="carousel-item c-item">
+          <div class="carousel-item">
             <img src="./Gambar/gambar2.jpg" class="d-block w-100 " alt="...">
-            <div class="carousel-caption top-0 mt-5 d-none d-md-block">
+            <div class="carousel-caption top-0 d-none d-md-block align-content-center">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the second slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Second slide label</h1>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-4">Read More</button>
             </div>
           </div>
-          <div class="carousel-item c-item">
+          <div class="carousel-item">
             <img src="./Gambar/gambar3.jpg" class="d-block w-100 " alt="...">
-            <div class="carousel-caption top-0 mt-5 d-none d-md-block">
+            <div class="carousel-caption top-0 d-none d-md-block align-content-center">
               <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the third slide.</p>
               <h1 class="display-1 fw-bolder text-capitalize">Third slide label</h1>
               <button class="btn btn-primary px-4 py-2 fs-5 mt-4">Read More</button>
