--- a/PMB.html
+++ b/PMB.html
@@ -64,9 +64,7 @@
                   Mahasiswa
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Ormawa (BEM)</a></li>
-                  <li><a class="dropdown-item" href="#">Himpunan</a></li>
-                  <li><a class="dropdown-item" href="#">UKM</a></li>
+                  <li><a class="dropdown-item" href="#">Ormawa</a></li>
                   <li><a class="dropdown-item" href="#">Beasiswa</a></li>
                 </ul>
               </li>
