--- a/K.akademik.html
+++ b/K.akademik.html
@@ -62,7 +62,7 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Ormawa</a></li>
-                    <li><a class="dropdown-item" href="#">Beasiswa</a></li>
+                    <li><a class="dropdown-item" href="beasiswa.html">Beasiswa</a></li>
                   </ul>
                 </li>
                 <li>
