--- a/beasiswa.html
+++ b/beasiswa.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
+    <title>Beasiswa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
@@ -30,8 +30,7 @@
           <div class="collapse navbar-collapse me-5" id="navbarScroll">
             <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li>
-                <a class="nav-link me-3" href="index.html">Home
-                </a>
+                <a class="nav-link me-3" href="index.html">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link me-3 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -79,112 +78,26 @@
       </nav>
     </header>
     <main>
-      <div id="hero-carousel" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./Gambar/gambar1.jpg" class="d-block w-100 " alt="...">
-            <div class="carousel-caption top-0 d-none d-md-block align-content-center">
-              <p class="mt-5 fs-3 text-uppercase">Higher Education For All</p>
-              <h1 class="display-1 fw-bolder text-capitalize">STT CIPASUNG</h1>
-              <button class="btn btn-success px-4 py-2 fs-5 mt-4">Read More</button>
-            </div>
+     <div class="container-fluid bg-success p-2">
+          <div class="container">
+               <h2 class="text-white">Beasiswa</h2>
           </div>
-          <div class="carousel-item">
-            <img src="./Gambar/gambar2.jpg" class="d-block w-100 " alt="...">
-            <div class="carousel-caption top-0 d-none d-md-block align-content-center">
-              <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the second slide.</p>
-              <h1 class="display-1 fw-bolder text-capitalize">Second slide label</h1>
-              <button class="btn btn-success px-4 py-2 fs-5 mt-4">Read More</button>
-            </div>
+     </div>
+
+     <div class="container mt-4 mb-4">
+          <div>
+          <p>Sekolah Tinggi Teknologi Cipasung merupakan Sekolah Tinggi yang berada di Priangan Timur, setiap tahunnya Sekolah Tinggi Teknologi Cipasung atau biasa disebut STTC selalu di penuhi oleh Mahasiswa baru dari berbagai daerah dari seluruh Indonesia dengan berbagai latar belakang ekonomi, STT Cipasung tentunya tidak ingin keterbatasan ekonomi menjadi penghalang bagi Mahasiswa untuk dapat belajar. Maka dari itu STT Cipasung menyediakan berbagai jenis beasiswa bagi Mahasiswa.</p>
           </div>
-          <div class="carousel-item">
-            <img src="./Gambar/gambar3.jpg" class="d-block w-100 " alt="...">
-            <div class="carousel-caption top-0 d-none d-md-block align-content-center">
-              <p class="mt-5 fs-3 text-uppercase">Some representative placeholder content for the third slide.</p>
-              <h1 class="display-1 fw-bolder text-capitalize">Third slide label</h1>
-              <button class="btn btn-success px-4 py-2 fs-5 mt-4">Read More</button>
-            </div>
+
+          <div>
+               <h3>
+                    Beasiswa BAZNAS
+               </h3>
+               <p>Beasiswa S1 BAZNAS Kabupaten Tasikmalaya adalah program beasiswa bagi mahasiswa yang sedang menempuh studi di kampus mitra Beasiswa BAZNAS Kabupaten Tasikmalaya untuk semester 7 & 8.</p>
+               <button class="btn btn-success">Baca Selengkapnya</button>
           </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#hero-carousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
-      <h1 class="text-center m-4">Berita Terbaru</h1>
-    <div class="container pb-5">
-        <div class="row g-3">
-            <div class="col-md-4">
-                <div class="card bg-light card-item">
-                    <img src="./Gambar/gambar1.jpg" class="card-img-top card-img" alt="Berita 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Judul Berita 1</h5>
-                        <p class="card-text">Ini adalah ringkasan berita 1. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="berita1.html" class="btn btn-success">Baca Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-light card-item">
-                    <img src="./Gambar/gambar2.jpg" class="card-img-top card-img" alt="Berita 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Judul Berita 2</h5>
-                        <p class="card-text">Ini adalah ringkasan berita 2. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="#" class="btn btn-success">Baca Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-light card-item">
-                    <img src="./Gambar/gambar3.jpg" class="card-img-top card-img" alt="Berita 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Judul Berita 3</h5>
-                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="#" class="btn btn-success">Baca Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-light card-item">
-                    <img src="./Gambar/gambar1.jpg" class="card-img-top card-img" alt="Berita 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Judul Berita 3</h5>
-                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="#" class="btn btn-success">Baca Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-light card-item">
-                    <img src="./Gambar/gambar2.jpg" class="card-img-top card-img" alt="Berita 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Judul Berita 3</h5>
-                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="#" class="btn btn-success">Baca Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card bg-light card-item">
-                    <img src="./Gambar/gambar3.jpg" class="card-img-top card-img" alt="Berita 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Judul Berita 3</h5>
-                        <p class="card-text">Ini adalah ringkasan berita 3. Ini memberikan sedikit informasi tentang konten berita.</p>
-                        <a href="#" class="btn btn-success">Baca Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+     </div>
+     
 
     </main>
     
