--- a/berita1.html
+++ b/berita1.html
@@ -64,7 +64,7 @@
                 Mahasiswa
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Ormawa</a></li>
+                <li><a class="dropdown-item" href="ormawa.html">Ormawa</a></li>
                 <li><a class="dropdown-item" href="#">Beasiswa</a></li>
               </ul>
             </li>
